--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,6 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-
-
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -30,12 +27,20 @@
             <version>3.12.4</version>
             <scope>test</scope>
             </dependency>
-
-
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
