--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+target/
+.idea/
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 # Compiled class file
 *.class
 
